@@ -2,17 +2,37 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        // Ensure JCenter is removed if it exists
     }
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
+
+    afterEvaluate {
+        // Ensure dependencies are resolved properly
+        if (project.hasProperty("android")) {
+            android {
+                compileOptions {
+                    sourceCompatibility = JavaVersion.VERSION_1_8
+                    targetCompatibility = JavaVersion.VERSION_1_8
+                }
+            }
+        }
+    }
 }
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+
+// Fix for potential path_provider_android issue
+gradle.projectsEvaluated {
+    subprojects {
+        tasks.withType(JavaCompile) {
+            options.forkOptions.jvmArgs += ["--add-opens", "java.base/java.nio=ALL-UNNAMED"]
+        }
+    }
 }
